<resources>
    <!-- -->
    <string name="app_name">Pedidos</string>
    <string name="nav_header_title">Pedidos</string>
    <string name="nav_header_subtitle">Sin filas, lo que te gusta!</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- -->
    <string name="action_settings">Configuracion</string>
    <string name="action_config_data">Mis datos</string>

    <!-- -->
    <string name="menu_login">Login</string>
    <string name="menu_signup">Registro</string>
    <string name="menu_orderhist">Historial pedidos</string>

    <!-- -->
    <string name="app_logo_description">App Logo</string>

    <!-- -->
    <string name="app_login_mail_hint">Correo</string>
    <string name="app_login_password_hint">Contraseña</string>
    <string name="app_login_password_reset_text">¿Olvido su contraseña?</string>
    <string name="app_login_button_text">INICIAR SESION</string>
    <string name="app_login_logo_content_desc">logo</string>

    <!-- -->
    <string name="app_signup_name_hint">Nombres</string>
    <string name="app_signup_surname_hint">Apellidos</string>
    <string name="app_signup_mail_hint">Correo</string>
    <string name="app_signup_phone_hint">Telefono</string>
    <string name="app_signup_password_hint">Contraseña</string>
    <string name="app_signup_button_text">REGISTRO</string>
    <string name="app_signup_logo_content_desc">logo</string>

    <!-- -->
    <string name="app_signup_confirm_hint">OK :D</string>

    <!-- -->
    <string name="botton_nav_title_home">home</string>
    <string name="botton_nav_title_orders">orders</string>
    <string name="botton_nav_title_coupons">coupons</string>
    <string name="botton_nav_title_search">search</string>

    <!-- -->
    <string name="order_detail_img_desc">Product overview</string>
    <string name="order_detail_logo_desc">Product overview</string>
    <string name="order_detail_product_name">Nombre producto</string>
    <string name="order_detail_product_cost">$50.000</string>
    <string name="order_detail_product_detail">Combo Familiar 1</string>
    <string name="order_detail_purchase_date">31-OCT-2020</string>

    <!-- -->
    <string name="coupon_value">$10.000</string>
    <string name="coupon_description">En cualquier producto</string>
    <string name="coupon_title_text">Mis cupones</string>

    <!-- -->
    <string name="user_account_nav_text">Guardar cambios</string>
    <string name="user_account_save_changes">Guardar cambios</string>
</resources>