<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_order_hist">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.uan.pedidos.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_signup"
        android:name="com.uan.pedidos.ui.signup.SignUpFragment"
        android:label="@string/menu_signup"
        tools:layout="@layout/fragment_signup" />

    <fragment
        android:id="@+id/nav_order_hist"
        android:name="com.uan.pedidos.ui.orderhistory.OrderHistFragment"
        android:label="@string/menu_orderhist"
        tools:layout="@layout/fragment_order_hist" />

    <fragment
        android:id="@+id/nav_user_account"
        android:name="com.uan.pedidos.ui.user.UserAccountFragment"
        android:label="@string/user_account_nav_text"
        tools:layout="@layout/user_account" />
</navigation>