<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_bottom_nav"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="71dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:contentDescription="@string/order_detail_img_desc"
            app:srcCompat="@drawable/ic_menu_gallery" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/order_detail_product_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_product_cost" />

            <TextView
                android:id="@+id/order_detail_product_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_product_detail" />

            <TextView
                android:id="@+id/order_detail_purchase_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_purchase_date" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>