<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpFragment">

    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="190dp"
        android:layout_height="147dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="110dp"
        android:contentDescription="@string/app_signup_logo_content_desc"
        android:src="@drawable/applogo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_gallery" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_form_names_input"
            android:layout_width="396dp"
            android:layout_height="wrap_content"
            android:hint="@string/app_signup_name_hint"
            android:textColorHighlight="#D1B6D1"
            android:textColorLink="#D1B6D1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_form_surnames_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_signup_surname_hint"
            android:textColorHighlight="#D1B6D1"
            android:textColorLink="#D1B6D1" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/signup_form_mail_input"
        android:layout_width="404dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/app_signup_mail_hint"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="443dp" />

    <EditText
        android:id="@+id/signup_form_phone_input"
        android:layout_width="398dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/app_signup_phone_hint"
        android:inputType="phone"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="512dp" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="148dp"
        android:layout_height="59dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:background="@drawable/background_bottom_nav"
        android:text="@string/app_signup_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="644dp" />

    <EditText
        android:id="@+id/signup_form_password_input"
        android:layout_width="393dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/app_signup_password_hint"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="578dp" />
</androidx.constraintlayout.widget.ConstraintLayout>